kubernetes/apps/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: 8989
