kubernetes/apps/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  parentRefs:
    - name: main
      namespace: network
  hostnames:
    - "sonarr.zlaya.tech"
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
